@@ -52,7 +52,7 @@ import org.testng.annotations.Test;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true javax.xml.transform.ptests.TransformerTest03
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow javax.xml.transform.ptests.TransformerTest03
  * @run testng/othervm javax.xml.transform.ptests.TransformerTest03
  */
 @Listeners({jaxp.library.FilePolicy.class})
